--- a/.prettierrc
+++ b/.prettierrc
@@ -5,18 +5,7 @@
     "printWidth": 120,
     "tabWidth": 4,
     "useTabs": false,
-    "importOrder": [
-        "^react$",
-        "<THIRD_PARTY_MODULES>",
-        "^config",
-        "^pages",
-        "^view",
-        "^store",
-        "^state",
-        "^hooks",
-        "^form-fields",
-        ".style$"
-    ],
+    "importOrder": ["^react$", "<THIRD_PARTY_MODULES>", ".style$"],
     "importOrderSeparation": true,
     "importOrderSortSpecifiers": true,
     "importOrderParserPlugins": ["jsx", "typescript", "classProperties"]
